--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,38 +1,48 @@
-contactbar nav {
+.cbar {
     width: 100%;
+    height: 200px;
     float: left;
-    padding: 1.2vmin;
-    font-size:1.4em;
+    padding: 0;
+    font-size: 1.4em;
     font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
     list-style: none;
-  background-color: #cdfdda;
-border-bottom: 1px solid;
-border-top: 1px solid;
+    background-color: #cdfdda;
+    border-bottom: 1px solid;
+    border-top: 1px solid;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+
+
 }
 
-nav ul {
-    margin: 0;
-    padding: 0;
+
+.cbar p {
+    text-align: center;
+    font-size: 1.5em;
+    margin-top: 25px;
+    margin-bottom: 100px;
+}
+
+
+.cbar ul {
+    margin-bottom: 0px;
+    vertical-align: bottom;
     list-style: none;
 }
 
-nav li {
+.cbar li {
     display: inline-block;
-    width:25%;
-    text-align:center;
+    width: 33.33%;
 }
 
-nav a {
+.cbar a {
     color: #000;
     text-decoration: none;
     transition: all ease-in-out 0.25s;
+    text-align: center;
 }
 
-nav a:hover {
+.cbar a:hover {
     color: rgb(122, 122, 122)
-}
-
-.scrolled {
-    position: fixed;
-    width: 100%;
 }
