--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -6,7 +6,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     padding-top: 20vw;
+}
+
+.greetingsub {
+    font-size: 2vw;
+    text-align: center;
+    padding-top: 0.5vw;
 }
 
 .input-line {
@@ -24,3 +31,4 @@
 50.5% {opacity: 1;}
 100% {opacity: 1;}
 }
+
