--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,6 @@
 .cbar {
     width: 100%;
-    height: 200px;
+    height: 225px;
     float: left;
     padding: 0;
     font-size: 1.4em;
@@ -11,9 +11,7 @@
     border-top: 1px solid;
     text-align: center;
     position: absolute;
-    bottom: 0px;
-
-
+    align-items: center;
 }
 
 
@@ -21,28 +19,49 @@
     text-align: center;
     font-size: 1.5em;
     margin-top: 25px;
-    margin-bottom: 100px;
 }
 
 
-.cbar ul {
+.contacts {
+    align-self: center;
+    align-items: center;
     margin-bottom: 0px;
     vertical-align: bottom;
     list-style: none;
+    display: inline-table;
 }
 
-.cbar li {
+.contacts section {
     display: inline-block;
-    width: 33.33%;
+    width: 33.3%;
 }
 
-.cbar a {
-    color: #000;
-    text-decoration: none;
-    transition: all ease-in-out 0.25s;
+
+@keyframes pop-up {
+    from {transform:scale(1);}
+    to {transform:scale(1.5);}
+  }
+
+  .white-circle {
+    background: #ffffff;
+    border-radius: 50%;
+    height: 80px;
     text-align: center;
-}
+      width:80px;
 
-.cbar a:hover {
-    color: rgb(122, 122, 122)
-}
+      box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25),
+      0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
+  }
+
+  .white-circle:hover{
+    cursor: pointer;
+    animation: pop-up 0.1s ease infinite;
+  }
+
+  .circle-icons {
+    color: black;
+    display: table-cell;
+    height: 87px;
+    vertical-align: middle;
+      width: 80px;
+  }
