--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,7 @@ nav {
   background-color: #cdfdda;
 border-bottom: 1px solid;
 border-top: 1px solid;
+position:absolute;
 }
 
 nav ul {
@@ -18,7 +19,7 @@ nav ul {
 
 nav li {
     display: inline-block;
-    width:25%;
+    width:20%;
     text-align:center;
 }
 
@@ -34,5 +35,7 @@ nav a:hover {
 
 .scrolled {
     position: fixed;
+    margin-top: 0; 
+    z-index: 100;
     width: 100%;
 }
