--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -10,9 +10,10 @@
     text-align: center;
 }
 
-.project {
+.projectgallery {
+    padding-top: 50px;
+    padding-bottom: 50px;
     width: 100%;
-    padding: 0;
     font-size: 1.4em;
     font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
     list-style: none;
@@ -20,4 +21,80 @@
     border-bottom: 1px solid;
     border-top: 1px solid;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    flex-wrap: wrap;
+    
 }
+
+
+.square {
+    position: relative;
+    width: 20%;
+    background-color: #cdfdda;
+  }
+  .square:hover {
+    cursor: pointer;
+  }
+  
+  .square:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
+  
+  .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+
+  .cpp:hover {
+    cursor: pointer;
+    
+  }
+
+  
+  .html:hover {
+    cursor: pointer;
+    
+  }
+
+  
+  .css:hover {
+    cursor: pointer;
+    
+  }
+
+  
+  .js:hover {
+    cursor: pointer;
+    
+  }
+
+  
+  .njs:hover {
+    cursor: pointer;
+    
+  }
+
+
+  
+  .react:hover {
+    cursor: pointer;
+    
+  }
+
+  
+  .android:hover {
+    cursor: pointer;
+    
+  }
+
+  
+  .kotlin:hover {
+    cursor: pointer;
+    
+  }
