--- a/src/components/About.css
+++ b/src/components/About.css
@@ -19,6 +19,7 @@
 }
 
 .leftAboutSec p {
+    
     word-break:break-word;
     max-width: 500px;
     font-size: 1.8rem;
@@ -46,7 +47,7 @@
 .AboutSecButtons {
     display: flex;
     position: relative;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 5rem;
     margin-top: 2rem;
 }
@@ -99,6 +100,7 @@
   }
 
   .green-diamond {
+      margin: auto;
     background: #cdfdda;
     height: 60px;
     text-align: center;
