--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,100 +1,137 @@
 .projects {
-    width: 100%;
-    padding: 0;
-    font-size: 1.4em;
-    font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
-    list-style: none;
-    background-color: #ffffff;
-    border-bottom: 1px solid;
-    border-top: 1px solid;
-    text-align: center;
+  width: 100%;
+  padding: 0;
+  font-size: 1.4em;
+  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
+  list-style: none;
+  background-color: #ffffff;
+  border-bottom: 1px solid;
+  border-top: 1px solid;
+  text-align: center;
 }
+
+
 
 .projectgallery {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    width: 100%;
-    font-size: 1.4em;
-    font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
-    list-style: none;
-    background-color: #ffffff;
-    border-bottom: 1px solid;
-    border-top: 1px solid;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-    flex-wrap: wrap;
-    
+  padding-top: 50px;
+  padding-bottom: 50px;
+  width: 100%;
+  font-size: 1.4em;
+  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
+  list-style: none;
+  background-color: #ffffff;
+  border-bottom: 1px solid;
+  border-top: 1px solid;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
 }
 
-
 .square {
-    position: relative;
-    width: 20%;
-    background-color: #cdfdda;
-  }
-  .square:hover {
-    cursor: pointer;
-  }
-  
-  .square:after {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-  }
-  
-  .content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-  }
+  position: relative;
+  width: 20%;
+  background-color: #cdfdda;
+  border: 2px solid;
+  border-color: black;
+  margin: 0;
+  transition: all ease-in-out 0.25s;
+}
 
+.square:hover {
+  cursor: pointer;
+}
 
-  .cpp:hover {
-    cursor: pointer;
-    
-  }
+.square:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
 
-  
-  .html:hover {
-    cursor: pointer;
-    
-  }
+.content {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 0;
+}
 
-  
-  .css:hover {
-    cursor: pointer;
-    
-  }
+.project_image {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height:100%;
+}
 
-  
-  .js:hover {
-    cursor: pointer;
-    
-  }
+.project_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.25s;
+}
 
-  
-  .njs:hover {
-    cursor: pointer;
-    
-  }
+.project_overlay>* {
+  transform: translateY(20px);
+  transition: transform 0.25s;
+}
 
+.project_overlay:hover>* {
+  transform: translateY(0);
+}
 
-  
-  .react:hover {
-    cursor: pointer;
-    
-  }
+.project_overlay:hover {
+  opacity: 1;
+}
 
-  
-  .android:hover {
-    cursor: pointer;
-    
-  }
+.project_title {
+  font-size: 1em;
+  font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
+}
 
-  
-  .kotlin:hover {
-    cursor: pointer;
-    
-  }
+.project_desc {
+  margin-top: 0.25em;
+  font-size: 0.75em;
+  font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+}
+
+.cpp:hover {
+  cursor: pointer;
+}
+
+.html:hover {
+  cursor: pointer;
+}
+
+.css:hover {
+  cursor: pointer;
+}
+
+.js:hover {
+  cursor: pointer;
+}
+
+.njs:hover {
+  cursor: pointer;
+}
+
+.react:hover {
+  cursor: pointer;
+}
+
+.android:hover {
+  cursor: pointer;
+}
+
+.kotlin:hover {
+  cursor: pointer;
+}
