--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@ nav {
     width: 100%;
     float: left;
     padding: 1.2vmin;
-    font-size:1.4em;
+    font-size:1.4vw;
     font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
     list-style: none;
   background-color: #cdfdda;
