--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -94,13 +94,13 @@
 }
 
 .project_title {
-  font-size: 1em;
+  font-size: 1.5vw;
   font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
 }
 
 .project_desc {
   margin-top: 0.25em;
-  font-size: 0.75em;
+  font-size: 1.1vw;
   font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
 }
 
