--- a/src/components/About.css
+++ b/src/components/About.css
@@ -45,6 +45,8 @@
     border-radius: 50%;
     width: 400px;
     height: 400px;
+    box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25),
+    0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
 }
 
 .AboutSecButtons {
@@ -115,6 +117,8 @@
       border-right: 1px solid;
       border-bottom: 1px solid;
       border-top: 1px solid;
+      box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25),
+      0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
   }
 
   .green-diamond:hover{
