--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -37,6 +37,8 @@
   border-color: black;
   margin: 0;
   transition: all ease-in-out 0.25s;
+  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25),
+  0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
 }
 
 .square:hover {
