--- a/src/components/subcomponents/ProjectCard.css
+++ b/src/components/subcomponents/ProjectCard.css
@@ -37,6 +37,8 @@
     border-color: black;
     margin: 0;
     transition: all ease-in-out 0.25s;
+    box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25),
+    0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
   }
   
   .square:hover {
@@ -142,7 +144,7 @@
     .delay-1 { animation-delay: 0.6s; }  
     .delay-2 { animation-delay: 0.7s; }
     .delay-3 { animation-delay: 0.8s; }
-    
+
   .animate.pop {
     animation-duration: 0.5s;
     animation-name: animate-pop;
