--- a/src/components/AboutTitle.css
+++ b/src/components/AboutTitle.css
@@ -6,7 +6,8 @@
     font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
     font-size: 3rem;
     margin-top: 0.5rem;
-    text-align: center
+    text-align: center;
+    margin-bottom: 0rem;
 }
 
 @media only screen and (max-width: 768px) {
