--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -51,13 +51,12 @@
   width: 80px;
   box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25),
     0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
+  transition: all ease-in-out 0.25s;
 }
 
 .white-circle:hover {
   cursor: pointer;
-  animation: pop-up 0.1s ease;
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
+  background-color: #85a88e;
 }
 
 .circle-icons {
