--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -41,10 +41,6 @@
   0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
 }
 
-.square:hover {
-  cursor: pointer;
-}
-
 .square:after {
   content: "";
   display: block;
@@ -104,6 +100,14 @@
   margin-top: 0.25em;
   font-size: 1.1vw;
   font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+}
+
+.project_desc.graph {
+  font-size: 0.9vw;
+}
+
+.project_desc.notes_java {
+  font-size: 1vw;
 }
 
 .cpp:hover {
