added health harbor project and icons

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -102,6 +102,10 @@
   font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
 }
 
+.project_desc.health_harbor {
+  font-size: 0.8vw;
+}
+
 .project_desc.grade_analyzer {
   font-size: 0.9vw;
 }
