--- a/src/components/About.css
+++ b/src/components/About.css
@@ -126,12 +126,12 @@
     border-top: 1px solid;
     box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25),
     0 0.4em 1.25em 0 rgba(0, 0, 0, 0.15) !important;
-    transition: all ease-in-out 0.25s;
+    transition: transform 250ms;
+    cursor: pointer;
 }
 
 .green-diamond:hover {
-    cursor: pointer;
-    background-color: #85a88e;
+    transform: rotate(45deg) translate(-7px, -7px);
 }
 
 .diamond-icons {
