--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -48,10 +48,6 @@
     transition: all ease-in-out 0.25s;
 }
 
-.experiences a:hover {
-    color: rgb(122, 122, 122)
-}
-
 .vertical-timeline-element-content {
     width: 100%;
     font-family: 'proxima_nova_rgbold', Helvetica, Arial, sans-serif;
@@ -68,15 +64,21 @@
 }
 
 .vertical-timeline-element-icon {
-    cursor: pointer;
     background-color: #cdfdda;
     transition: all ease-in-out 0.25s;
 }
 
-.vertical-timeline-element-icon:hover {
-    background-color: #85a88e;
-}
-
 #desc {
     margin: 1.5em 0 2em 0;
+}
+
+.timeline-element
+{
+    cursor: pointer;
+    transition: transform 250ms;
+}
+
+.timeline-element:hover
+{
+    transform: translateY(-10px);
 }
