added arrow animation!

--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -46,12 +46,35 @@
 
 .arrow {
     border: solid black;
-    border-width: 0 3px 3px 0;
+    border-width: 0 0.1953125vw 0.1953125vw 0;
     display: inline-block;
-    padding: 20px;
+    padding: 1.042vw;
 }
 
 .down {
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
+    animation: animate 2s infinite;
+}
+
+@keyframes animate
+{
+    0%
+    {
+        opacity: 0;
+        transform: rotate(45deg) translate(-1.042vw, -1.042vw);
+    }
+    50%
+    {
+        opacity: 1;
+    }
+    100%
+    {
+        opacity: 0;
+        transform: rotate(45deg) translate(1.042vw, 1.042vw);
+    }
+}
+
+.arrow-container {
+    padding-top: 2vw !important;
 }
