update/enhance website with projs

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -122,6 +122,14 @@
   font-size: 1vw;
 }
 
+.project_desc.survey {
+  font-size: 0.8vw;
+}
+
+.project_desc.aiorrealnews {
+  font-size: 0.8vw;
+}
+
 .cpp:hover {
   cursor: pointer;
 }
