--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,41 +1,27 @@
 .projects {
     width: 100%;
-    padding: var(--spacing-lg) 0;
+    padding: var(--spacing-lg) 0 var(--spacing-sm) 0;
     font-family: var(--font-heading);
     background-color: var(--color-background);
-    border-bottom: 1px solid var(--color-text);
-    border-top: 1px solid var(--color-text);
     text-align: center;
     position: relative;
 }
 
 .projects h1 {
-    font-size: 2.5rem;
-    margin: 0 0 0.75rem 0;
+    font-size: clamp(1.5rem, 2rem, 2.5rem);
+    margin: 0 0 0 0;
     letter-spacing: -0.02em;
     position: relative;
     display: inline-block;
 }
 
-.projects h1::after {
-    content: '';
-    position: absolute;
-    bottom: -4px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 60px;
-    height: 3px;
-    background-color: var(--color-text);
-    border-radius: 2px;
-}
-
 .projectgallery {
-    padding: var(--spacing-xl) var(--spacing-md);
+    padding-right: var(--spacing-md);
+    padding-left: var(--spacing-md);
+    padding-bottom: var(--spacing-lg);
     width: 100%;
     font-family: var(--font-heading);
     background-color: var(--color-background);
-    border-bottom: 1px solid var(--color-text);
-    border-top: 1px solid var(--color-text);
     text-align: center;
     display: flex;
     justify-content: center;
@@ -141,12 +127,7 @@
 
 @media only screen and (max-width: 768px) {
     .projects h1 {
-        font-size: 2rem;
-    }
-
-    .projects h1::after {
-        width: 50px;
-        height: 2px;
+        font-size: 1.5rem;
     }
 
     .projectgallery {
