--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -19,6 +19,7 @@
 }
 
 .greeting .type {
+    font-size: 2rem !important;
     font-family: 'SF Mono', 'Fira Code', 'Cascadia Code', 'Source Code Pro', 'Consolas', 'Monaco', monospace;
     background-color: #1e1e1e;
     color: #d4d4d4;
@@ -27,7 +28,7 @@
     position: relative;
     min-width: 1000px;
     border: 1px solid #333;
-    min-height: 100px;
+    min-height: 102px;
     border-radius: 0 0 8px 8px;
     margin-top: 1.8rem;
     padding-left: 2.5rem;
@@ -88,10 +89,14 @@
 }
 
 @keyframes blink {
-    0%, 49.5% {
+
+    0%,
+    49.5% {
         opacity: 0;
     }
-    50.5%, 100% {
+
+    50.5%,
+    100% {
         opacity: 1;
     }
 }
@@ -114,9 +119,11 @@
         opacity: 0;
         transform: rotate(45deg) translate(-12px, -12px);
     }
+
     50% {
         opacity: 1;
     }
+
     100% {
         opacity: 0;
         transform: rotate(45deg) translate(12px, 12px);
@@ -158,5 +165,33 @@
     .arrow {
         padding: 10px;
         border-width: 0 2px 2px 0;
+    }
+}
+
+@media (max-width: 1400px) {
+    .greeting .type {
+        font-size: 1.5rem !important;
+        min-height: 89px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .greeting .type {
+        font-size: 1.25rem !important;
+        min-height: 82px;
+    }
+}
+
+@media (max-width: 768px) {
+    .greeting .type {
+        font-size: 1.25rem !important;
+        min-height: 66px;
+    }
+}
+
+@media (max-width: 480px) {
+    .greeting .type {
+        font-size: 1rem !important;
+        min-height: 60px;
     }
 }
